# valley

./: .gitignore  CLAUDE.md  README.md  export_presets.cfg  framework.json  framework.lock.json  project.godot  valley.strataproj
.github/workflows/: ci.yml  test.yml
assets/: PLACEHOLDERS.md
assets/audio/: SOURCES.md  night_loop.card.json  night_loop.wav.import  wind_loop.card.json  wind_loop.wav.import
assets/paintings/: moth.png.import  placeholder_cactus.svg.import  placeholder_pebbles.svg.import  placeholder_tuft_1.svg.import  placeholder_tuft_2.svg.import  silly_tree.png.import  silly_tree_2.png.import  silly_tree_3.png.import
data/: README.md
data/audio/: footsteps.json  mix.json
data/bodies/: fox.json  player.json  villager.json
data/caravans/: valley_runner.json
data/cells/: cell_-11_-11.json  cell_0_-2.json  cell_0_-3.json  cell_0_0.json  cell_0_1.json  cell_16_-13.json  cell_17_-12.json  cell_1_-2.json
data/characters/: README.md
data/climate/: climate.json  weather.json
data/dialogue/: keeper.json  wanderer.json
data/flora/: arch_tree.json  bloom_bulb_flower.json  bloom_ember_bloom.json  bloom_night_bloom.json  bloom_pink_pool_lily.json  bloom_spire_bloom.json  bloom_starburst_gold.json  bloom_tide_flower.json  bloom_tuft.json  dry_tuft.json  dune_cactus.json  gc_dune_dry_scatter.json  gc_dune_dune_grass.json  gc_dune_sand_bloom.json  gc_dune_spine_cluster.json  gc_filler_dry_tuft.json  gc_filler_dust_clump.json  gc_filler_small_stone.json  gc_filler_twig_litter.json  gc_oasis_clover_mat.json  gc_oasis_curl_fern.json  gc_oasis_moss_cushion.json  gc_oasis_star_bloom.json  gc_oasis_teal_grass.json  gc_oasis_violet_bells.json  gc_peak_alpine_star.json  gc_peak_peak_cushion.json  gc_peak_rock_lichen.json  gc_peak_snow_tuft.json  gc_scrub_gray_sage.json  gc_scrub_ground_succulent.json  gc_scrub_needle_grass.json  gc_scrub_ochre_bloom.json  gc_scrub_thistle_star.json  gc_strand_beach_grass.json  gc_strand_driftwood_tuft.json  gc_strand_kelp_ribbon.json  gc_strand_sea_holly.json  gc_strand_shore_bloom.json  gc_volcanic_ash_grass.json  (+12 more)
data/interiors/: smugglers_cellar.json
data/items/: dried_bloom.json  firefly.json  river_stone.json
data/looks/: gouache.json  sky.json
data/names/: names.json
data/npcs/: keeper.json  wanderer.json
data/quests/: 01_voice_in_the_valley.json  02_small_rituals.json  03_between_two_solitudes.json  04_the_dry_spell.json  dry_spell.json
data/regions/: alcatraz_rock.json  angel_isle.json  barren_bowl.json  barren_isle.json  bay_islet_1.json  bay_islet_2.json  bay_islet_3.json  causeway_barren.json  causeway_mesa.json  causeway_west.json  channel_east.json  channel_west_1.json  channel_west_2.json  cleft_isle.json  demo_atoll.json  east_arm.json  east_crest.json  east_point.json  foothills.json  gate_dome_east.json  gate_dome_west.json  gate_head.json  gate_holm.json  home_north.json  home_west.json  islet_n1.json  islet_n2.json  islet_n3.json  islet_r1.json  islet_r2.json  islet_s1.json  islet_s2.json  islet_s3.json  islet_w1.json  islet_w2.json  kona_lobe.json  mauna.json  metropolis_mesa.json  north_shore.json  pali_isle.json  (+14 more)
data/roads/: valley_road.json
data/scatter/: decals.json  props.json  water_plants.json
data/skills/: 01_wayfaring.json  02_stillness.json  03_swimming.json  04_foraging.json
data/sky/: day_night.json  swarms.json
data/story/: recurrent.json
data/terrain/: edit_layer.exr  edit_layer.exr.import
data/villagers/: README.md
data/water/: pond.json  sea.json
data/wildlife/: star_hounds.json
data/world/: biome_map.png.import  biomes.json  budget.json  elevation_guide.exr  elevation_guide.exr.import  guide.json  landform.json  sketch.json
docs/: ART_BIBLE.md  ASSETS_NEEDED.html  ASSETS_NEEDED.md  DECISIONS.md  DESIGN.md  DESIGN_QUESTS.md  DEV_GUIDE.md  FOUNDATIONS.md  IDEAS.md  PLAN_AUDIO.md  PLAN_FABRIC.md  PLAN_FRAMEWORK.md  PLAN_INTERIORS.md  PLAN_NAVMESH.md  PLAN_PHYSICS.md  PLAN_SUBSTANCES.md  PLAN_TOOLKIT_AND_PLACEHOLDERS.md  RPG_WEIGHT.md  SESSION_2026-07-02_ambient_feel_and_combat.md  SIM_ROADMAP.md  STATUS.md  STORY.md  WATER_REVIEW.md
docs/lore/: README.md  axioms.md
game/bodies/: body_data.gd  body_data.gd.uid  body_loader.gd  body_loader.gd.uid
game/data/: cards.gd  cards.gd.uid  records.gd  records.gd.uid
game/dev/: boot_clock.gd  boot_clock.gd.uid  budget.ct  budget.gd  budget.gd.uid  dev_mode.gd  dev_mode.gd.uid  god_mode.gd  hot_reload.gd  hot_reload.gd.uid  overrides.gd  overrides.gd.uid  river_pen.gd  (+17 more)
native/: .gitignore  CMakeLists.txt
native-spike/: .gitignore  CMakeLists.txt  build.sh
native-spike/probe/: aligned_basis.jsonl  best_socket_snap.jsonl  contourspike.gdext  cycle_grid_step.jsonl  ground_normal.jsonl  probe.gd  project.godot  snap_to_grid.jsonl  socket_world.jsonl  toolkit_snap.gd
native-spike/src/: contour_kernel.cpp  contour_kernel.h  lattice_embed.h  register_types.cpp
native/contour/: .gitignore  CMakeLists.txt  build.sh
native/contour/src/: contour_kernel.cpp  contour_kernel.h  lattice_embed.h  register_types.cpp
native/src/: register_types.cpp  terrain_kernel.cpp  terrain_kernel.h
scripts/: framework_dist.sh  reimport.sh  rules_matrix.sh  run.sh  soak.sh  soak_matrix.sh  test.sh  toolkit.sh
tests/: audition_probe.gd  audition_probe.gd.uid  audition_probe.tscn  bake_world.gd  bake_world.gd.uid  biome_pen_probe.gd  biome_pen_probe.gd.uid  biome_pen_probe.tscn  buoy_bench.gd  buoy_bench.gd.uid  caravan_probe.gd  caravan_probe.gd.uid  caravan_probe.tscn  character_lint.gd  character_lint.gd.uid  character_lint.tscn  clock_probe.gd  clock_probe.gd.uid  clock_probe.tscn  current_probe.gd  current_probe.gd.uid  current_probe.tscn  derive_biomes.gd  derive_biomes.gd.uid  derive_guide.gd  derive_guide.gd.uid  desk_verbs.gd  desk_verbs.gd.uid  desk_verbs.tscn  determinism_trap_probe.gd  determinism_trap_probe.gd.uid  determinism_trap_probe.tscn  fabric_bones_probe.gd  fabric_bones_probe.gd.uid  fabric_bones_probe.tscn  fabric_probe.gd  fabric_probe.gd.uid  fabric_probe.tscn  fabric_softbody_probe.gd  fabric_softbody_probe.gd.uid  (+117 more)
(+541 files in other folders)
